WinJS Menu commands hover styles are not showing properly, Fixes #568

--- a/src/less/desktop/colors-overlay.less
+++ b/src/less/desktop/colors-overlay.less
@@ -329,15 +329,15 @@
             background-color: transparent;
             color: rgb(0, 0, 0);
         }
-        &.win-menu button:focus, .win-menu button:focus,
-        &.win-menu button:active, .win-menu button:active {
+        &.win-menu.win-menu button.win-command:enabled:focus, .win-menu.win-menu button.win-command:enabled:focus,
+        &.win-menu.win-menu button.win-command:enabled:active, .win-menu.win-menu button.win-command:enabled:active {
             background-color: rgb(222, 222, 222);
         }
-        &.win-menu button:enabled:hover:active, .win-menu button:enabled:hover:active {
+        &.win-menu.win-menu button.win-command:enabled:hover:active, .win-menu.win-menu button.win-command:enabled:hover:active {
             color: rgb(255, 255, 255);
             background-color: rgb(0, 0, 0);
         }
-        &.win-menu button:-ms-keyboard-active, .win-menu button:-ms-keyboard-active {
+        &.win-menu.win-menu button.win-command:enabled:-ms-keyboard-active, .win-menu.win-menu button.win-command:enabled:-ms-keyboard-active {
             color: rgb(255, 255, 255);
             background-color: rgb(0, 0, 0);
         }
